[gd_scene load_steps=13 format=2]

[ext_resource path="res://components/vfx_lightning/vfx_lightning.gd" type="Script" id=1]
[ext_resource path="res://assets/particle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.018018, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.666667, 0.777273 ), 0.0, 0.0, 0, 0, Vector2( 0.966967, 0.0193182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.018018, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.614841, 0.6125 ), 0.0, 0.0, 0, 0, Vector2( 0.966967, 0.0193182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 15 )
color_ramp = SubResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Line" type="Line2D" parent="."]
modulate = Color( 3, 3, 3, 1 )
points = PoolVector2Array( 0, 0, 50, 50 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2" type="Line2D" parent="."]
modulate = Color( 3, 3, 3, 1 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line3" type="Line2D" parent="."]
modulate = Color( 3, 3, 3, 1 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Tween" type="Tween" parent="."]

[node name="Particles" type="Node2D" parent="."]

[node name="CastingParticles" type="Particles2D" parent="Particles"]
modulate = Color( 4, 4, 4, 1 )
emitting = false
lifetime = 0.3
process_material = SubResource( 12 )
texture = ExtResource( 2 )

[node name="HitParticles" type="Particles2D" parent="Particles"]
modulate = Color( 4, 4, 4, 1 )
emitting = false
amount = 15
lifetime = 0.5
one_shot = true
explosiveness = 0.25
randomness = 0.25
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 2 )
